# 2024-os-proj2

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_Kor.md  README_brif.md  log.txt  main.c  makefile  memory_access_log.csv  memory_access_pattern.txt  proc.c  sample.txt  scheduler_dump.txt  shared.c  tlb_cache_hit_log.csv  운영체제_project2_Virtual_Memory.hwpx
Main_Code/Code/: Basic.c  FIFO.c  LRU.c  Makefile  Two_level.c
Project#02-Virtual Memory/Disk/: disk.txt
Project#02-Virtual Memory/src/: Makefile  common.h  log.c  log.h  main.c  process.c  process.h  queue.c  queue.h  replacement_policy.c  replacement_policy.h  scheduling.c  scheduling.h  timer.c  timer.h  virtual_memory.c  virtual_memory.h
ds/: iarrq.c  iarrq.h  ilinkq.c  ilinkq.h  pcbq.c  pcbq.h  pidq.c  pidq.h
include/: OS_memory.h  communication.h  memory.h  process.h
legacy/: file2.c
myfolder/ver1/: Makefile  msg.h  queue.c  sec.c  vmm.c  vmm.h
myfolder/ver2/: makefile  msg2.h  queue.c  sec2.c  vmm2.c  vmm2.h  vmm2_stats.c  vmm2_swap.c
proc/: pcb.c  pcb.h  proc.c
project2/: Makefile  project2  project2.c  schedule_dump.txt
runtime_logs/vaddr_gausian_random/: memory_access_log.csv  memory_access_pattern.txt  tlb_cache_hit_log.csv
runtime_logs/vaddr_uniform_random/: memory_access_pattern.txt
runtime_logs/vaddr_zifpian_random/: memory_access_log.csv  memory_access_pattern.txt  tlb_cache_hit_log.csv
shared/: shared.c  shared.h
src/: OS_memory.c  communication.c  config.txt  log.c  log.h  logic.c  logic.h  main.c  process.c  struct.h  temp.c
src/entity/: child.c  child.h  page_manager.c  page_manager.h  scheduler.c  scheduler.h
src/entity/page_manager/: page_manager.c  page_manager.h
src/managers/: memory_manager.c  memory_manager.h  process_manager.c  process_manager.h
src/pre_process_data/: data_with_char_values.txt  generate_virtual_mem.py
src/pre_process_data/16kb/: data_1.txt  data_10.txt  data_2.txt  data_3.txt  data_4.txt  data_5.txt  data_6.txt  data_7.txt  data_8.txt  data_9.txt
src/pre_process_data/1kb/: data_1.txt  data_10.txt  data_2.txt  data_3.txt  data_4.txt  data_5.txt  data_6.txt  data_7.txt  data_8.txt  data_9.txt
src/pre_process_data/4kb/: data_1.txt  data_10.txt  data_2.txt  data_3.txt  data_4.txt  data_5.txt  data_6.txt  data_7.txt  data_8.txt  data_9.txt
src/pre_process_data/64kb/: data_1.txt  data_10.txt  data_2.txt  data_3.txt  data_4.txt  data_5.txt  data_6.txt  data_7.txt  data_8.txt  data_9.txt
src/structs/: memory.c  memory.h  page_table.c  page_table.h  tlb.c  tlb.h
src/util/: ipc_manager.c  ipc_manager.h  log_manager.c  log_manager.h  queue.c  queue.h
src/util/frame_list/: frame_list.c  frame_list.h  frame_list_test  frame_list_test.c
src/util/msg_queue/: message_queue.c  message_queue.h
src/util/page_list/: page_list.c  page_list.h
src/util/paging/: paging.c  paging.h  paging_test
src/util/paging/test/: paging_test.c  paging_test2.c  paging_test3.c  paging_test4.c
src/util/pid_queue/: pid_queue.c  pid_queue.h
src/util/process/: process.c  process.h
src/util/random/: random.c  random.h
src/util/shared_memory/: shared_memory.c  shared_memory.h
src/util/swap/: swap.c  swap.h
src/util/timer/: timer.c  timer.h
src/util/tlb/: test_log  tlb.c  tlb.h  tlb_test  tlb_test.c
wrap/: wrap.c  wrap.h
